<resources>
    <string name="app_name">SipScore5</string>
    <string name="register">Registrieren</string>
    <string name="login">Einloggen</string>
    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="login_success">Erfolgreich eingeloggt!</string>
    <string name="confirm_password">Passwort bestätigen:</string>
    <string name="profile">Profil</string>
    <string name="rating">Ratings</string>
    <string name="drink">Drinks</string>
    <string name="appname">SipScore</string>
    <string name="drinks">Drinks</string>
    <string name="rankings">Rankings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drinksearch">Getränkesuche</string>
    <string name="rate">Bewerten</string>
    <string name="settings">Einstellungen</string>
    <string name="edit_profile">Profil bearbeiten</string>
    <string name="switch_appearance">Erscheinungsbild wechseln</string>
    <string name="top_5">Top 5</string>
    <string name="bottom_5">Bottom 5</string>
    <string name="logout">Ausloggen</string>
    <string name="logged_in_as">Eingeloggt als</string>
    <string name="editAccount">Account bearbeiten:</string>
    <string name="confirm_changes">Änderungen bestätigen</string>
    <string name="flop">FLOP</string>
    <string name="top">TOP</string>
    <string name="delete_account">Account löschen</string>
    <string name="oldPassword">Altes Passwort</string>
    <string name="newPassword">Neues Passwort</string>
    <string-array name="drink_categories">
        <item>Wasser</item>
        <item>Biere</item>
        <item>Energydrinks</item>
        <item>Softdrinks</item>
        <item>Spirituosen</item>
    </string-array>
</resources>