<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appname"
        android:textSize="32sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/register" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:layout_marginTop="16dp" />

</LinearLayout>
