<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="0dp"
        app:title="SipScore" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:tabTextColor="@android:color/white"
        app:tabIndicatorColor="@android:color/white"
        app:tabMode="fixed"
        app:tabGravity="fill">

        <com.google.android.material.tabs.TabItem
            android:text="@string/profile"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <com.google.android.material.tabs.TabItem
            android:text="@string/rating"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <com.google.android.material.tabs.TabItem
            android:text="@string/drink"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

    </com.google.android.material.tabs.TabLayout>

</LinearLayout>
